# elsa

./: LICENSE  README.md  changes.md  elsa.cabal  stack.yaml  test.lc  tests3.lc
src/: Main.hs
src/Language/: Elsa.hs
src/Language/Elsa/: Eval.hs  Lexer.x  Parser.hs  Parser.y  Runner.hs  Types.hs  UX.hs  Utils.hs
src/Language/Elsa/old/: Parser.y
tests/: Test.hs
tests/dupdefn/: dup_defn.lc  dup_defn_eval.lc
tests/dupeval/: dup_eval.lc
tests/invalid/: capture_bad.lc  eta_bad.lc  head_bad.lc  id_bad.lc  weak_bad.lc
tests/neg/: id_0_bad.lc  succ_1_bad.lc
tests/ok/: T4.lc  T8.lc  barz.lc  bool.lc  capture.lc  eta.lc  fix.lc  head.lc  list.lc  nat.lc  strat_specific.lc  sum.lc  weak.lc
tests/pos/: alpha.lc  fixpoint.lc  id.lc  id_0.lc  ski.lc  succ_1.lc
tests/timeout/: diverge.lc
