name:                elsa
version:             0.1.0.0
synopsis:            A tiny language for understanding the lambda-calculus
license:             MIT
license-file:        LICENSE
author:              Ranjit Jhala
maintainer:          jhala@cs.ucsd.edu
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


Library
  ghc-options:         -W -threaded
  exposed-modules:    Language.Elsa.Types,
                      Language.Elsa.Eval,
                      Language.Elsa.Parser
  Default-Extensions: OverloadedStrings

  -- other-extensions:
  build-depends:       base,
                       array,
                       mtl,
                       megaparsec,
                       containers,
                       directory,
                       filepath

  hs-source-dirs:      src
  default-language:    Haskell2010
  build-tools:         alex, happy
  other-modules:       Language.Elsa.Lexer,
                       Language.Elsa.UX,
                       Language.Elsa.Utils

executable elsa
  build-depends:       base,
                       mtl,
                       elsa
  default-language:    Haskell2010
  main-is:             src/Main.hs
  Default-Extensions:  OverloadedStrings

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  ghc-options:      -threaded
  Default-Extensions: OverloadedStrings
  main-is:          Test.hs
  build-depends:    base,
                    directory,
                    filepath,
                    tasty,
                    tasty-hunit,
                    elsa
