name:                elsa
version:             0.2.0.1
synopsis:            A tiny language for understanding the lambda-calculus
description:         elsa is a small proof checker for verifying sequences of
                     reductions of lambda-calculus terms. The goal is to help
                     students build up intuition about lambda-terms, alpha-equivalence,
                     beta-reduction, and in general, the notion of computation
                     by substitution.
license:             MIT
license-file:        LICENSE
author:              Ranjit Jhala
maintainer:          jhala@cs.ucsd.edu
category:            Language
Homepage:            http://github.com/ucsd-progsys/elsa
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Source-Repository head
  Type:        git
  Location:    https://github.com/ucsd-progsys/elsa/

Library
  ghc-options:        -W
  exposed-modules:    Language.Elsa
                      Language.Elsa.Types,
                      Language.Elsa.Eval,
                      Language.Elsa.Parser,
                      Language.Elsa.Runner

  Default-Extensions: OverloadedStrings

  build-depends:       base >= 4 && < 5,
                       array,
                       mtl,
                       megaparsec,
                       hashable,
                       unordered-containers,
                       directory,
                       filepath,
                       dequeue,
                       json

  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:       Language.Elsa.UX,
                       Language.Elsa.Utils

executable elsa
  build-depends:       base,
                       mtl,
                       elsa
  default-language:    Haskell2010
  main-is:             src/Main.hs
  Default-Extensions:  OverloadedStrings

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  ghc-options:      -threaded
  Default-Extensions: OverloadedStrings
  main-is:          Test.hs
  build-depends:    base,
                    directory,
                    filepath,
                    tasty,
                    tasty-hunit,
                    elsa
